--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+     <script src="https://kit.fontawesome.com/1e0a13a89f.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="style.css">
+    <title>Profile Generator</title>
 </head>
 <body>
-    
+    <header>
+        <h1> My Team </h1>
+    </header>
+
+    <main>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+           abbe <br/>
+            <i class="fas fa-mug-hot"></i>Manager</div>
+         <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: 111</li>
+            <li class="list-group-item">Email:<span id="email"><a href="abbezz@live.com">erik756@hotmail.com</a></span></li>
+            <li class="list-group-item">Manager Number: 8210</li>
+         </ul>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                Marcus <br/>
+                <i class="fas fa-glasses"></i>Engineer</div>
+         <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: 7777</li>
+            <li class="list-group-item">Email:<span id="email"><a href="abbezz@live.com">abbezz@live.com</a></span></li>
+            <li class="list-group-item">Github Username:  <a  target="_blank" href="https://github.com/abbezz">abbezz</a></li>
+         </ul>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+               Omar93 <br/>
+                <i class="fas fa-user-graduate"></i>Intern</div>
+         <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: 7565</li>
+            <li class="list-group-item">Email: <span id="email"><a href="Omar93@hotmail.com">Adde97@hotmail.com</a></span></li>
+            <li class="list-group-item">School: Boland Gymnasiet</li>
+         </ul>
+        </div>
+    </main>
 </body>
 </html>
