managed to test Employee

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,7 +34,7 @@
          <ul class="list-group list-group-flush">
             <li class="list-group-item">ID: 7777</li>
             <li class="list-group-item">Email:<span id="email"><a href="mailto:abbezz@live.com">abbezz@live.com</a></span></li>
-            <li class="list-group-item">Github Username:  <a  target="_blank" href="https://github.com/abbezz">abbezz</a></li>
+            <li class="list-group-item"> <a  target="_blank" href="https://github.com/abbezz">abbezz</a></li>
          </ul>
         </div>
 
@@ -46,6 +46,16 @@
             <li class="list-group-item">ID: 7565</li>
             <li class="list-group-item">Email: <span id="email"><a href="mailto:Omar93@hotmail.com">Omar93@hotmail.com</a></span></li>
             <li class="list-group-item">School: Boland Gymnasiet</li>
+         </ul>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+           abbe <br/>
+            <i class="fas fa-mug-hot"></i>Employee</div>
+         <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: 555</li>
+            <li class="list-group-item">Email:<span id="email"><a href="mailto:David756@hotmail.com">David756@hotmail.com</a></span></li>
+            
          </ul>
         </div>
     </main>
